# JOJ3-config-generator

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  yaml2json.py
.gitea/workflows/: build.yaml
immutable_file/: push.yaml  release.yaml
joj3_config_generator/: __init__.py  convert.py  create.py  generator.py  load.py  loader.py  main.py  model.py
joj3_config_generator/lib/: repo.py  task.py
joj3_config_generator/models/: __init__.py  answer.py  common.py  const.py  joj1.py  repo.py  result.py  task.py
joj3_config_generator/processers/: joj1.py  repo.py  task.py
joj3_config_generator/templates/C++/: clang-tidy.toml  cppcheck.toml  cpplint.toml
joj3_config_generator/templates/Java/: ve472-l1.toml
joj3_config_generator/templates/Python/: basic.toml
joj3_config_generator/templates/Rust/: basic.toml
joj3_config_generator/transformers/: answer.py  joj1.py  repo.py  task.py
joj3_config_generator/utils/: logger.py
language_specific/: declare_compilers.py
lib/: compile.py  diff.py  frame.py  healthcheck.py  repo.py  run.py  task.py
outputs/: sample.json
src/: main.py
src/joj3_config_generator/: main.py  matlab_defs.py
src/language_specific/: declare_compilers.py
tests/: conftest.py  example_test.py  test_all_cases.py  utils.py
tests/basic/: repo.toml  task.json  task.toml
tests/convert/: conftest.py  test_convert_cases.py  utils.py
tests/convert/basic/: repo.toml  repo.toml.bak  task.json  task.toml
tests/convert/basic/immutable/.gitea/workflows/: push.yaml  release.yaml
tests/convert/basic/immutable_files/: .gitignore  push.yaml  release.yaml
tests/convert/clang-tidy/: task.json  task.toml
tests/convert/cppcheck/: task.json  task.toml
tests/convert/cpplint/: task.json  task.toml
tests/convert/diff/: repo.toml  task.json  task.toml
tests/convert/elf/: task.json  task.toml
tests/convert/empty/: task.json  task.toml
tests/convert/extra-field/: task.json  task.toml
tests/convert/full/: repo.toml  task.json  task.toml
tests/convert/keyword/: repo.toml  task.json  task.toml
tests/convert/result-detail/: repo.toml  task.json  task.toml
tests/convert/unnecessary/: task.json  task.toml
tests/convert/whitelisted-chars/: repo.toml  task.json  task.toml
tests/convert_joj1/: conftest.py  test_convert_joj1_cases.py  utils.py
tests/convert_joj1/basic/: task.toml  task.yaml
tests/create/: test_create_cases.py  utils.py
tests/create/basic/: answers.json  task.toml
tests/create/cpp/: answers.json  task.toml
tests/immutable_file/: .gitignore  push.yaml  release.yaml
tests/immutable_hteam/: push.yaml  release.yaml
tests/immutable_hteam-test/: push.yaml  release.yaml
tests/immutable_p3/: .gitattributes  push.yaml  release.yaml
tests/immutable_p3-test/: .gitignore  push.yaml  release.yaml
toml/: repo.toml  task.toml  task_complex.toml  task_simple.toml
