[project]
name = "JOJ3-config-generator"
version = "0.1.0"
dependencies = [
    "PyYAML>=6.0.2",
]
requires-python = ">=3.10"
authors = [
    { name = "JOJ3-dev", email = "joj3@focs.ji.sjtu.edu.cn" },
]
maintainers = []
description = "JOJ3 json configuration file generator"
readme = "README.md"
license = { text = "MIT" }

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = ["flake8>=7.1.1", "black>=24.10.0"]
test = ["pytest>=8.3.3", "pytest-cov>=5.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
