[project]
name = "JOJ3-config-generator"
version = "0.1.0"
dependencies = [
    "PyYAML>=6.0.2",
    "typer>=0.12.5",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
]
requires-python = ">=3.6"
authors = [{ name = "JOJ3-dev", email = "joj3@focs.ji.sjtu.edu.cn" }]
maintainers = []
description = "JOJ3 json configuration file generator"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
joj3-config-generator = "joj3_config_generator.main:app"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = ["black>=24.10.0", "mypy>=1.12.0", "types-PyYAML>=6.0.12.20240917"]
test = ["pytest>=8.3.3", "pytest-cov>=5.0.0"]
dev = ["pre-commit>=4.0.1"]

[tool.pdm.scripts]
lint = "mypy joj3_config_generator tests"
test = "pytest"
all = { composite = ["lint", "test"] }
app.call = "joj3_config_generator.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
